--- a/slides.html
+++ b/slides.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Working with ACS Data</title>
     
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -794,9 +794,9 @@ hljs.initHighlightingOnLoad();
   <div class="slides">
 
 <section data-state="section" data-transition="linear" data-transition-speed="default">
-<h1></h1><p>Alex Shum<br/>May 2014</p>
+<h1>Working with ACS Data</h1><p>Alex Shum<br/>May 2014</p>
 
-<div class="slideContent noTitle" >
+<div class="slideContent" >
 
 </div>
 
@@ -1189,6 +1189,8 @@ Most relevant table from ACS: B27001 Health Insurance Coverage Status by Sex by 
 4   Male  6.to.17.years       No  2242804
 5   Male 18.to.24.years     With 10395228
 6   Male 18.to.24.years       No  4608837
+7   Male 25.to.34.years     With 13478715
+8   Male 25.to.34.years       No  6191777
 </code></pre>
 
 </div>
